--- a/fontstyle.css
+++ b/fontstyle.css
@@ -3,3 +3,5 @@ body {
   font-family: "Lexend Deca", sans-serif;
 }
 button{ font-family: "Lexend Deca", sans-serif;}
+input,select{ font-family: "Lexend Deca", sans-serif;}
+h1,h2,h3,h4,h5,h6,p,ul,li,a{ font-family: "Lexend Deca", sans-serif;}
